# rail-router

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: connections.csv  stations.csv
src/: main.cpp
src/algorithms/: dijkstra.cpp  dijkstra.h  matcher.cpp  matcher.h
src/models/: connection.cpp  connection.h  route.h  station.cpp  station.h
src/utils/: csv_reader.cpp  csv_reader.h
